--- a/src/mod_rating_by_type/locale/de/LC_MESSAGES/django.po
+++ b/src/mod_rating_by_type/locale/de/LC_MESSAGES/django.po
@@ -7467,3 +7467,416 @@ msgstr ""
 
 #~ msgid "Information about the server"
 #~ msgstr "Informationen über den server"
+
+msgctxt "squad_nav_tab"
+msgid "Tankmen"
+msgstr "Panzermänner"
+
+msgctxt "tankman_sortie_nav_tab"
+msgid "Tankman Sortie Statistics"
+msgstr "Panzermänn Einsatzstatistik"
+
+msgctxt "tankman_sortie_nav_tab"
+msgid "Tankman Sortie Log"
+msgstr "Panzermänn Einsatz Logbuch"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Statistics"
+msgstr "Panzermänn Statistik"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Sorties"
+msgstr "Panzermänn Einsätze"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Virtual Lifes"
+msgstr "Virtuelle Leben von Panzermänn"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Awards"
+msgstr "Panzermänn Auszeichnungen"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Killboard"
+msgstr "Panzermänn Killboard"
+
+msgctxt "tour_top"
+msgid "Best tankmen in the last 24 hours"
+msgstr "Beste Panzermänner der letzten 24 Stunden"
+
+#: .\stats\templates\main.html:175 .\stats\templates\main.html:201
+#: .\stats\templates\tour.html:175 .\stats\templates\tour.html:201
+msgctxt "tour_top"
+msgid "tankman nickname"
+msgstr "Panzermänn name"
+
+#: .\stats\templates\main.html:196
+msgctxt "tour_top"
+msgid "Best live tankmen"
+msgstr "Beste überlebende Panzermänner"
+
+#: .\stats\templates\main.html:234 .\stats\templates\tour.html:232
+msgid "Overall Tankman Rankings"
+msgstr "Gesamtübersicht der Panzermänn Rangliste"
+
+#: .\stats\templates\main.html:319 .\stats\templates\tour.html:296
+msgid "Active tankmen"
+msgstr "Aktive Panzermänner"
+
+#: .\stats\templates\main.html:423
+msgid "Top Tankmen"
+msgstr "Beste Panzermänner"
+
+#: .\stats\templates\mission.html:192
+msgid "Tankmen Rankings"
+msgstr "Panzermänner-Ranglisten"
+
+msgid "Tankman Rankings"
+msgstr "Panzermänn Ranglisten"
+
+msgctxt "total"
+msgid "Lost aircrafts/tanks"
+msgstr "Verlorene Flugzeuge/Panzer"
+
+#: .\stats\templates\squad.html:480 .\stats\templates\tankman.html:528
+msgctxt "specialty"
+msgid "Light Tanks"
+msgstr "Leichter Panzer"
+
+#: .\stats\templates\squad.html:491 .\stats\templates\tankman.html:539
+msgctxt "specialty"
+msgid "Medium Tanks"
+msgstr "Mittlerer Panzer"
+
+#: .\stats\templates\squad.html:502 .\stats\templates\tankman.html:550
+msgctxt "specialty"
+msgid "Heavy Tanks"
+msgstr "Schwerer Panzer"
+
+#: .\stats\templates\squad.html:539
+msgid "K/L - Kills per Aircraft/Tank Lost"
+msgstr "Luftsiege pro Flugzeugverlust/Panzerlust"
+
+#: .\stats\templates\squad.html:573
+msgid "GK/L - G.Kills per Aircraft/Tank Lost"
+msgstr "zer. Bodenziele pro Flugzeugverlust/Panzerlust"
+
+#: .\stats\templates\tankman.html:35
+msgid "Favorite Tank"
+msgstr "Favorisiertes Panzer"
+
+#: .\stats\templates\tankman.html:53
+msgid "number of destroyed aerial targets for the current virtual life"
+msgstr "Anzahl der Zerstörte Flugzeuge für das aktuelle virtuelle Leben"
+
+#: .\stats\templates\tankman.html:78 .\stats\templates\tankman.html:472
+#: .\stats\templates\tankman_vlife.html:73
+msgid "Destroyed aerial targets"
+msgstr "Zerstörte Luftziele"
+
+#: .\stats\templates\tankman.html:398 .\stats\templates\tankman.html:484
+#: .\stats\templates\tankman_vlife.html:371
+msgctxt "total"
+msgid "Lost Tanks"
+msgstr "Verlorene Panzer"
+
+#: .\stats\templates\tankman.html:426 .\stats\templates\tankman_vlife.html:379
+msgctxt "total"
+msgid "Destroyed Friendly Aircraft"
+msgstr "Zerstörte freundliche Flugzeuge"
+
+#: .\stats\templates\tankman.html:442
+msgid "Best Air Streak"
+msgstr "Beste Luftstrecke"
+
+#: .\stats\templates\tankman.html:446
+msgid "Best Sortie Time Streak"
+msgstr "Beste Einsatzzeit Serie"
+
+#: .\stats\templates\tankman.html:454
+msgid "Max Ground targets destroyed in one sortie"
+msgstr "Bodenziele"
+
+#: .\stats\templates\tankman.html:586
+msgid ""
+"if ratio > 1 - tankman playing in the minority, if ratio < 1 - tankman "
+"playing in the majority"
+msgstr ""
+"Wenn das Verhältnis der Panzermänn >1 ist. Dann sind diese in der Minderheit. "
+"Wenn das Verhältnis der Panzermänn <1 ist, dann sind diese in der Mehrheit"
+
+#: .\stats\templates\tankman.html:614
+msgid "K/L - Kills per Tank Lost"
+msgstr "Luftsiege pro Panzerlust"
+
+#: .\stats\templates\tankman.html:630
+msgid "K/H - Kills per Sortie Time"
+msgstr "Luftsiege pro Einsatz Stunde"
+
+#: .\stats\templates\tankman.html:648
+msgid "GK/L - G.Kills per Tank Lost"
+msgstr "zer. Bodenziele pro Panzerlust"
+
+#: .\stats\templates\tankman.html:664
+msgid "GK/H - G.Kills per Sortie Time"
+msgstr "zer. Bodenziele pro Einsatz Stunde"
+
+#: .\stats\templates\tankman.html:679
+msgid "Other names of the tankman on this account"
+msgstr "Andere Namen des Panzermänn auf diesem Account"
+
+#: .\stats\templates\tankman_awards.html:3
+#: .\stats\templates\tankman_awards.html:14
+msgctxt "tankman_awards"
+msgid "Tankman Awards"
+msgstr "Panzermänn Auszeichnungen"
+
+#: .\stats\templates\tankman_awards.html:15
+msgctxt "tankman_awards"
+msgid "Tankman"
+msgstr "Panzermänn"
+
+#: .\stats\templates\tankman_killboard.html:3
+#: .\stats\templates\tankman_killboard.html:14
+msgid "Tankman Killboard"
+msgstr "Panzermänn Killboard"
+
+#: .\stats\templates\tankman_killboard.html:15
+#: .\stats\templates\tankman_vlifes.html:15
+msgid "Tankman"
+msgstr "Panzermänn"
+
+#: .\stats\templates\tankman_sortie.html:3
+#: .\stats\templates\tankman_sortie.html:16
+msgctxt "sortie_page_title"
+msgid "Tankman Sortie"
+msgstr "Panzermänn Einsatzstatistik"
+
+#: .\stats\templates\tankman_sortie.html:35
+#: .\stats\templates\tankman_sortie.html:36
+#: .\stats\templates\tankman_sortie_log.html:36
+#: .\stats\templates\tankman_sortie_log.html:37
+#: .\stats\templates\tankman_sorties.html:69
+#: .\stats\templates\tankman_sorties.html:70
+#: .\stats\templates\tankman_vlife.html:34
+#: .\stats\templates\tankman_vlife.html:35
+#: .\stats\templates\tankman_vlifes.html:64
+#: .\stats\templates\tankman_vlifes.html:65
+msgctxt "sortie_status"
+msgid "Tank is destroyed"
+msgstr "Panzer ist zerstört"
+
+#: .\stats\templates\tankman_sortie.html:47
+#: .\stats\templates\tankman_sortie.html:48
+#: .\stats\templates\tankman_sortie_log.html:48
+#: .\stats\templates\tankman_sortie_log.html:49
+#: .\stats\templates\tankman_sorties.html:81
+#: .\stats\templates\tankman_sorties.html:82
+#: .\stats\templates\tankman_vlife.html:46
+#: .\stats\templates\tankman_vlife.html:47
+#: .\stats\templates\tankman_vlifes.html:76
+#: .\stats\templates\tankman_vlifes.html:77
+msgctxt "sortie_status"
+msgid "In service"
+msgstr "in Betrieb"
+
+#: .\stats\templates\tankman_sortie.html:52
+#: .\stats\templates\tankman_sortie_log.html:53
+#: .\stats\templates\tankman_sorties.html:15
+msgctxt "tankman_sorties"
+msgid "Tankman"
+msgstr "Panzermänn"
+
+#: .\stats\templates\tankman_sortie.html:57
+#: .\stats\templates\tankman_sortie_log.html:58
+msgid "Back to tankman sorties list"
+msgstr "Zurück zur Panzermänn Einsatzliste"
+
+#: .\stats\templates\tankman_sortie.html:63
+#: .\stats\templates\tankman_sortie_log.html:64
+msgid ""
+"The results of this sortie are not included in the statistics of the tankman "
+"because of the disconnect"
+msgstr "Keine Ergebnisse in der PanzermännstatistikGrund: Verbindungstrennung"
+
+#: .\stats\templates\tankman_sortie.html:72
+msgctxt "sortie"
+msgid "Duration of sortie"
+msgstr "Dauer des Ausfalls"
+
+#: .\stats\templates\tankman_sortie.html:75
+msgctxt "sortie"
+msgid "Crew status"
+msgstr "Panzerbesatzungsstatus"
+
+#: .\stats\templates\tankman_sortie.html:89
+msgctxt "sortie"
+msgid "Destroyed ground targets"
+msgstr "Zerstörte Bodenziele"
+
+#: .\stats\templates\tankman_sortie.html:90
+msgctxt "sortie"
+msgid "Destroyed aerial targets"
+msgstr "Zerstörte Luftziele"
+
+#: .\stats\templates\tankman_sortie.html:95
+msgctxt "sortie"
+msgid "Tank"
+msgstr "Panzer"
+
+#: .\stats\templates\tankman_sortie.html:101
+msgctxt "tank_payload"
+msgid "Default"
+msgstr ""
+
+#: .\stats\templates\tankman_sortie.html:116
+msgctxt "sortie"
+msgid "Tank status"
+msgstr "Status des Panzer"
+
+#: .\stats\templates\tankman_sortie.html:118
+msgctxt "sortie"
+msgid "In service"
+msgstr "in Betrieb"
+
+#: .\stats\templates\tankman_sortie.html:124
+msgctxt "sortie"
+msgid "Destroyed"
+msgstr "Zerstört"
+
+#: .\stats\templates\tankman_sortie.html:132
+msgctxt "sortie"
+msgid "Tank damage"
+msgstr "Panzerschaden"
+
+#: .\stats\templates\tankman_sortie_log.html:3
+msgctxt "sortie_page_title"
+msgid "Tankman Sortie Log"
+msgstr "Panzermänn Einsatz Logbuch"
+
+#: .\stats\templates\tankman_sorties.html:3
+#: .\stats\templates\tankman_sorties.html:14
+msgctxt "tankman_sorties"
+msgid "Tankman Sorties"
+msgstr "Panzermänn Einsätze"
+
+#: .\stats\templates\tankman_vlife.html:3
+#: .\stats\templates\tankman_vlife.html:15
+msgctxt "vlife_page_title"
+msgid "Tankman VLife"
+msgstr "V. Leben von Panzermann"
+
+#: .\stats\templates\tankman_vlife.html:51
+msgctxt "tankman_vlifes"
+msgid "Tankman"
+msgstr "Panzermänn"
+
+#: .\stats\templates\tankman_vlife.html:56
+msgid "Back to tankman vlifes list"
+msgstr "Zurück zur V. Leben von Panzermänn"
+
+#: .\stats\templates\tankman_vlifes.html:3
+#: .\stats\templates\tankman_vlifes.html:14
+msgctxt "tankman_vlifes"
+msgid "Tankman Virtual Lifes"
+msgstr "Virtuelle Leben von Panzermänn"
+
+#: .\stats\templates\tankmans.html:19
+msgid "Search Tankman"
+msgstr "Suche Panzermänn"
+
+#: .\stats\templates\tankmans.html:39
+msgid "Current Ground Streak"
+msgstr "aktuelle Bodenziele Abschussserie"
+
+#: .\stats\templates\tour.html:170
+msgctxt "tour_top"
+msgid "Best tankmen"
+msgstr "Beste Panzermänner"
+
+#: .\stats\templates\tour.html:196
+msgctxt "tour_top"
+msgid "Best tankmen streak"
+msgstr "Beste Panzermänner Abschussserie"
+
+#: .\stats\templates\tour.html:299
+msgctxt "tour_active"
+msgid "total tankmen"
+msgstr "Gesamt Panzermänner"
+
+msgid "Payload"
+msgstr "Nutzlast"
+
+#: .\stats\templates\main.html:223 .\stats\templates\tour.html:201
+msgid "Active pilots"
+msgstr "Aktive Piloten"
+
+msgid "Sortie Time (hours:minutes)"
+msgstr "Einsätze Zeit(Stunde:Minute)"
+
+msgid "Sortie Time"
+msgstr "Einsätze Zeit"
+
+msgid "Destroyed ground targets"
+msgstr "Zerstörte Bodenziele"
+
+msgid "Pilots Rankings"
+msgstr "Piloten-Rangliste"
+
+msgid "Players total"
+msgstr "Gesamt der Spieler"
+
+msgctxt "tour_active"
+msgid "total pilots"
+msgstr "Gesamt Piloten"
+
+#: .\stats\templates\tankman_sortie.html:81
+msgctxt "sortie"
+msgid "Abandoned tank"
+msgstr "Verlassener Panzer"
+
+msgctxt "sortie_status"
+msgid "Tank is abandoned"
+msgstr "Panzer ist verlassen"
+
+msgctxt "total"
+msgid "Abandoned tanks"
+msgstr "Verlassener Panzer"
+
+msgid "Tankmen"
+msgstr "Panzermänner"
+
+#: .\stats\templates\squad.html:52
+msgid "Not enough players to participate in the rating"
+msgstr "Nicht genug Spieler, um an der Wertung teilzunehmen"
+
+msgid "on the current ground streak of kills"
+msgstr "Anzahl der Bodenziele in Folge"
+
+msgid "on the average number of ground kill per one death (GK/D)"
+msgstr "Bodenziele pro Tod (GK/D)"
+
+#: .\stats\templates\mission.html:212 .\stats\templates\tankmans.html:132
+#: .\stats\templates\squads.html:111
+msgid "on the average number of ground kill per one hour (GK/Hr)"
+msgstr "Bodenziele pro Stunde (GK/Hr)"
+
+msgctxt "sortie"
+msgid "Disabled"
+msgstr "Deaktiviert"
+
+msgid "[Go to pilot statistics of same player]"
+msgstr "[Gehe zur Pilotstatistik desselben Spielers]"
+
+msgid "[Go to tankman statistics of same player]"
+msgstr "[Gehe zur Panzermann-statistik desselben Spielers]"
+
+msgid "Players on the server"
+msgstr "Spieler auf dem Server"
+
+msgid "List of players online"
+msgstr "Liste der Spieler online"
+
+msgctxt "online"
+msgid "players"
+msgstr "Spieler"
