--- a/src/mod_rating_by_type/locale/es/LC_MESSAGES/django.po
+++ b/src/mod_rating_by_type/locale/es/LC_MESSAGES/django.po
@@ -7357,3 +7357,419 @@ msgstr "Perfil actualizado con éxito."
 #~| msgid "number of sorties"
 #~ msgid "on the number of sorties"
 #~ msgstr "número de salidas"
+
+
+msgctxt "squad_nav_tab"
+msgid "Tankmen"
+msgstr "Jugadores tanque"
+
+msgctxt "tankman_sortie_nav_tab"
+msgid "Tankman Sortie Statistics"
+msgstr "Estadísticas de Salida"
+
+msgctxt "tankman_sortie_nav_tab"
+msgid "Tankman Sortie Log"
+msgstr "Log de Salida"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Statistics"
+msgstr "Estadísticas de jugadores tanque"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Sorties"
+msgstr "Salidas"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Virtual Lifes"
+msgstr "Vidas virtuales"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Awards"
+msgstr "Condecoraciones"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Killboard"
+msgstr ""
+
+msgctxt "tour_top"
+msgid "Best tankmen in the last 24 hours"
+msgstr "Mejores jugadores tanque en las últimas 24 horas"
+
+#: .\stats\templates\main.html:175 .\stats\templates\main.html:201
+#: .\stats\templates\tour.html:175 .\stats\templates\tour.html:201
+msgctxt "tour_top"
+msgid "tankman nickname"
+msgstr "Jugadores Tanque"
+
+#: .\stats\templates\main.html:196
+msgctxt "tour_top"
+msgid "Best live tankmen"
+msgstr "Mejores Jugadores Tanque vivos"
+
+#: .\stats\templates\main.html:234 .\stats\templates\tour.html:232
+msgid "Overall Tankman Rankings"
+msgstr "Ranking general de Jugadores Tanque"
+
+#: .\stats\templates\main.html:319 .\stats\templates\tour.html:296
+msgid "Active tankmen"
+msgstr "Activos Jugadores Tanque"
+
+#: .\stats\templates\main.html:423
+msgid "Top Tankmen"
+msgstr "Los mejores jugadores de tanques"
+
+#: .\stats\templates\mission.html:192
+msgid "Tankmen Rankings"
+msgstr "Ranking de jugadores tanques"
+
+msgid "Tankman Rankings"
+msgstr "Ranking de jugadores tanques"
+
+msgctxt "total"
+msgid "Lost aircrafts/tanks"
+msgstr "Avión/Tanques perdido"
+
+#: .\stats\templates\squad.html:480 .\stats\templates\tankman.html:528
+msgctxt "specialty"
+msgid "Light Tanks"
+msgstr "Tanques Livianos"
+
+#: .\stats\templates\squad.html:491 .\stats\templates\tankman.html:539
+msgctxt "specialty"
+msgid "Medium Tanks"
+msgstr "Tanques Medianos"
+
+#: .\stats\templates\squad.html:502 .\stats\templates\tankman.html:550
+msgctxt "specialty"
+msgid "Heavy Tanks"
+msgstr "Tanques Pesados"
+
+#: .\stats\templates\squad.html:539
+msgid "K/L - Kills per Aircraft/Tank Lost"
+msgstr "K/L destruir por avión/tanque perdido"
+
+#: .\stats\templates\squad.html:573
+msgid "GK/L - G.Kills per Aircraft/Tank Lost"
+msgstr "GK/L destruir por avión/tanque perdido"
+
+#: .\stats\templates\tankman.html:35
+msgid "Favorite Tank"
+msgstr "Tanque favorita"
+
+#: .\stats\templates\tankman.html:53
+msgid "number of destroyed aerial targets for the current virtual life"
+msgstr "Número de objetivos aéreos destruidos para la vida virtual actual"
+
+#: .\stats\templates\tankman.html:78 .\stats\templates\tankman.html:472
+#: .\stats\templates\tankman_vlife.html:73
+msgid "Destroyed aerial targets"
+msgstr "aéreos destruidos"
+
+#: .\stats\templates\tankman.html:398 .\stats\templates\tankman.html:484
+#: .\stats\templates\tankman_vlife.html:371
+msgctxt "total"
+msgid "Lost Tanks"
+msgstr "Tanques perdidos"
+
+#: .\stats\templates\tankman.html:426 .\stats\templates\tankman_vlife.html:379
+msgctxt "total"
+msgid "Destroyed Friendly Aircraft"
+msgstr "Aviones amistosos destruidos"
+
+#: .\stats\templates\tankman.html:442
+msgid "Best Air Streak"
+msgstr "Mejor racha de aire"
+
+#: .\stats\templates\tankman.html:446
+msgid "Best Sortie Time Streak"
+msgstr "Mejor racha per tiempo de salida"
+
+#: .\stats\templates\tankman.html:454
+msgid "Max Ground targets destroyed in one sortie"
+msgstr "Max Objetivos destruidos en tierra en una salida"
+
+#: .\stats\templates\tankman.html:586
+msgid ""
+"if ratio > 1 - tankman playing in the minority, if ratio < 1 - tankman "
+"playing in the majority"
+msgstr ""
+"ratio > 1 - jugado de tanque vuela con la minoría, ratio < 1 - jugado de tanque vuela con la "
+"mayoría"
+
+#: .\stats\templates\tankman.html:614
+msgid "K/L - Kills per Tank Lost"
+msgstr "K/L - destruidas/tanque perdido"
+
+#: .\stats\templates\tankman.html:630
+msgid "K/H - Kills per Sortie Time"
+msgstr "K/H - destruidas/tiempo de salida"
+
+#: .\stats\templates\tankman.html:648
+msgid "GK/L - G.Kills per Tank Lost"
+msgstr "GK/L - destruidas/tanque perdido"
+
+#: .\stats\templates\tankman.html:664
+msgid "GK/H - G.Kills per Sortie Time"
+msgstr "GK/H - destruidas/tiempo de salida"
+
+#: .\stats\templates\tankman.html:679
+msgid "Other names of the tankman on this account"
+msgstr "Otros nombres del jugado tanque en esta cuenta"
+
+#: .\stats\templates\tankman_awards.html:3
+#: .\stats\templates\tankman_awards.html:14
+msgctxt "tankman_awards"
+msgid "Tankman Awards"
+msgstr "Condecoraciones"
+
+#: .\stats\templates\tankman_awards.html:15
+msgctxt "tankman_awards"
+msgid "Tankman"
+msgstr "Jugadores Tanque"
+
+#: .\stats\templates\tankman_killboard.html:3
+#: .\stats\templates\tankman_killboard.html:14
+msgid "Tankman Killboard"
+msgstr ""
+
+#: .\stats\templates\tankman_killboard.html:15
+#: .\stats\templates\tankman_vlifes.html:15
+msgid "Tankman"
+msgstr "Jugador Tanque"
+
+#: .\stats\templates\tankman_sortie.html:3
+#: .\stats\templates\tankman_sortie.html:16
+msgctxt "sortie_page_title"
+msgid "Tankman Sortie"
+msgstr "Salida"
+
+#: .\stats\templates\tankman_sortie.html:35
+#: .\stats\templates\tankman_sortie.html:36
+#: .\stats\templates\tankman_sortie_log.html:36
+#: .\stats\templates\tankman_sortie_log.html:37
+#: .\stats\templates\tankman_sorties.html:69
+#: .\stats\templates\tankman_sorties.html:70
+#: .\stats\templates\tankman_vlife.html:34
+#: .\stats\templates\tankman_vlife.html:35
+#: .\stats\templates\tankman_vlifes.html:64
+#: .\stats\templates\tankman_vlifes.html:65
+msgctxt "sortie_status"
+msgid "Tank is destroyed"
+msgstr "Tanque destruido"
+
+#: .\stats\templates\tankman_sortie.html:47
+#: .\stats\templates\tankman_sortie.html:48
+#: .\stats\templates\tankman_sortie_log.html:48
+#: .\stats\templates\tankman_sortie_log.html:49
+#: .\stats\templates\tankman_sorties.html:81
+#: .\stats\templates\tankman_sorties.html:82
+#: .\stats\templates\tankman_vlife.html:46
+#: .\stats\templates\tankman_vlife.html:47
+#: .\stats\templates\tankman_vlifes.html:76
+#: .\stats\templates\tankman_vlifes.html:77
+msgctxt "sortie_status"
+msgid "In service"
+msgstr "en servicio"
+
+#: .\stats\templates\tankman_sortie.html:52
+#: .\stats\templates\tankman_sortie_log.html:53
+#: .\stats\templates\tankman_sorties.html:15
+msgctxt "tankman_sorties"
+msgid "Tankman"
+msgstr "Jugador Tanque"
+
+#: .\stats\templates\tankman_sortie.html:57
+#: .\stats\templates\tankman_sortie_log.html:58
+msgid "Back to tankman sorties list"
+msgstr "Volver a la lista de salidas"
+
+#: .\stats\templates\tankman_sortie.html:63
+#: .\stats\templates\tankman_sortie_log.html:64
+msgid ""
+"The results of this sortie are not included in the statistics of the tankman "
+"because of the disconnect"
+msgstr ""
+"Los resultados de esta salida no están incluidos en las estadísticas del "
+"Jugador Tanque a la desconexión"
+
+#: .\stats\templates\tankman_sortie.html:72
+msgctxt "sortie"
+msgid "Duration of sortie"
+msgstr "Duración de la salida"
+
+#: .\stats\templates\tankman_sortie.html:75
+msgctxt "sortie"
+msgid "Crew status"
+msgstr "Estado de la tripulación"
+
+#: .\stats\templates\tankman_sortie.html:89
+msgctxt "sortie"
+msgid "Destroyed ground targets"
+msgstr "Objetivos destruidos en tierra"
+
+#: .\stats\templates\tankman_sortie.html:90
+msgctxt "sortie"
+msgid "Destroyed aerial targets"
+msgstr "Objetivos aéreos destruidos"
+
+#: .\stats\templates\tankman_sortie.html:95
+msgctxt "sortie"
+msgid "Tank"
+msgstr "Tanque"
+
+#: .\stats\templates\tankman_sortie.html:101
+msgctxt "tank_payload"
+msgid "Default"
+msgstr "Defecto"
+
+#: .\stats\templates\tankman_sortie.html:116
+msgctxt "sortie"
+msgid "Tank status"
+msgstr "Estado del tanque"
+
+#: .\stats\templates\tankman_sortie.html:118
+msgctxt "sortie"
+msgid "In service"
+msgstr "en servicio"
+
+#: .\stats\templates\tankman_sortie.html:124
+msgctxt "sortie"
+msgid "Destroyed"
+msgstr "Destruido"
+
+#: .\stats\templates\tankman_sortie.html:132
+msgctxt "sortie"
+msgid "Tank damage"
+msgstr "Dañar del tanque"
+
+#: .\stats\templates\tankman_sortie_log.html:3
+msgctxt "sortie_page_title"
+msgid "Tankman Sortie Log"
+msgstr "Log de Salida"
+
+#: .\stats\templates\tankman_sorties.html:3
+#: .\stats\templates\tankman_sorties.html:14
+msgctxt "tankman_sorties"
+msgid "Tankman Sorties"
+msgstr "Salidas"
+
+#: .\stats\templates\tankman_vlife.html:3
+#: .\stats\templates\tankman_vlife.html:15
+msgctxt "vlife_page_title"
+msgid "Tankman VLife"
+msgstr "Vidas virtuales"
+
+#: .\stats\templates\tankman_vlife.html:51
+msgctxt "tankman_vlifes"
+msgid "Tankman"
+msgstr "Jugador Tanque"
+
+#: .\stats\templates\tankman_vlife.html:56
+msgid "Back to tankman vlifes list"
+msgstr "Volver a la lista de Vidas virtuales"
+
+#: .\stats\templates\tankman_vlifes.html:3
+#: .\stats\templates\tankman_vlifes.html:14
+msgctxt "tankman_vlifes"
+msgid "Tankman Virtual Lifes"
+msgstr "Vidas virtuales"
+
+#: .\stats\templates\tankmans.html:19
+msgid "Search Tankman"
+msgstr "Buscar"
+
+#: .\stats\templates\tankmans.html:39
+msgid "Current Ground Streak"
+msgstr "Tanque Racha Actual"
+
+#: .\stats\templates\tour.html:170
+msgctxt "tour_top"
+msgid "Best tankmen"
+msgstr "Mejores Tanque"
+
+#: .\stats\templates\tour.html:196
+msgctxt "tour_top"
+msgid "Best tankmen streak"
+msgstr "Mejores Racha Tanque"
+
+#: .\stats\templates\tour.html:299
+msgctxt "tour_active"
+msgid "total tankmen"
+msgstr "total"
+
+msgid "Payload"
+msgstr "Carga útil"
+
+#: .\stats\templates\main.html:223 .\stats\templates\tour.html:201
+msgid "Active pilots"
+msgstr "Pilotos activos"
+
+msgid "Sortie Time (hours:minutes)"
+msgstr "Hora de salida (horas:minuto)"
+
+msgid "Sortie Time"
+msgstr "Hora de salida"
+
+msgid "Destroyed ground targets"
+msgstr "Objetivos terrestres destruidos"
+
+msgid "Pilots Rankings"
+msgstr "Ranking de pilotos"
+
+msgid "Players total"
+msgstr "Jugadores total"
+
+msgctxt "tour_active"
+msgid "total pilots"
+msgstr "total pilotos"
+
+#: .\stats\templates\tankman_sortie.html:81
+msgctxt "sortie"
+msgid "Abandoned Tank"
+msgstr "Tanque Abandonado"
+
+msgctxt "sortie_status"
+msgid "Tank is abandoned"
+msgstr "El Tanque está abandonado"
+
+msgctxt "total"
+msgid "Abandoned tanks"
+msgstr "Tanque Abandonado"
+
+msgid "Tankmen"
+msgstr "Jugadores Tanque"
+
+#: .\stats\templates\squad.html:52
+msgid "Not enough players to participate in the rating"
+msgstr "No hay suficientes Jugadores Tanque para participar en el ranking"
+
+msgid "on the current ground streak of kills"
+msgstr "en la racha actual de terrestres victorias"
+
+msgid "on the average number of ground kill per one death (GK/D)"
+msgstr "sobre el número promedio de terrestres victorias por muerte (GK/D)"
+
+#: .\stats\templates\mission.html:212 .\stats\templates\tankmans.html:132
+#: .\stats\templates\squads.html:111
+msgid "on the average number of ground kill per one hour (GK/Hr)"
+msgstr "sobre el número promedio de terrestres victorias por hora (GK/Hr)"
+
+msgctxt "sortie"
+msgid "Disabled"
+msgstr "Discapacitado"
+
+msgid "[Go to pilot statistics of same player]"
+msgstr "[Ir a las estadísticas piloto del mismo jugador]"
+
+msgid "[Go to tankman statistics of same player]"
+msgstr "[Ir a las estadísticas tanque del mismo jugador]"
+
+msgid "Players on the server"
+msgstr "Jugadores en el servidor"
+
+msgid "List of players online"
+msgstr "Lista de jugadores el servidor"
+
+msgctxt "online"
+msgid "players"
+msgstr "jugadores"
