--- a/src/mod_rating_by_type/locale/ru/LC_MESSAGES/django.po
+++ b/src/mod_rating_by_type/locale/ru/LC_MESSAGES/django.po
@@ -7448,3 +7448,418 @@ msgstr "Профиль успешно обновлен."
 #~ msgctxt "aircraft_payload"
 #~ msgid "500 lb MC"
 #~ msgstr "500 lb MC"
+
+msgctxt "squad_nav_tab"
+msgid "Tankmen"
+msgstr "танкист"
+
+msgctxt "tankman_sortie_nav_tab"
+msgid "Tankman Sortie Statistics"
+msgstr "Статистика вылета танкиста"
+
+msgctxt "tankman_sortie_nav_tab"
+msgid "Tankman Sortie Log"
+msgstr "Хронология вылета танкиста"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Statistics"
+msgstr "Статистика танкиста"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Sorties"
+msgstr "Танковые бои"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Virtual Lifes"
+msgstr "Виртуальные жизни танкиста"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Awards"
+msgstr "Награды танкиста"
+
+msgctxt "tankman_nav_tab"
+msgid "Tankman Killboard"
+msgstr "танкист Killboard"
+
+msgctxt "tour_top"
+msgid "Best tankmen in the last 24 hours"
+msgstr "Лучший танкист за последние 24 часа"
+
+#: .\stats\templates\main.html:175 .\stats\templates\main.html:201
+#: .\stats\templates\tour.html:175 .\stats\templates\tour.html:201
+msgctxt "tour_top"
+msgid "tankman nickname"
+msgstr "имя танкиста"
+
+#: .\stats\templates\main.html:196
+msgctxt "tour_top"
+msgid "Best live tankmen"
+msgstr "Лучшие живые танкисты"
+
+#: .\stats\templates\main.html:234 .\stats\templates\tour.html:232
+msgid "Overall Tankman Rankings"
+msgstr "Полный рейтинг танкистa"
+
+#: .\stats\templates\main.html:319 .\stats\templates\tour.html:296
+msgid "Active tankmen"
+msgstr "Активные танкисты"
+
+#: .\stats\templates\main.html:423
+msgid "Top Tankmen"
+msgstr "Лучшие танкисты"
+
+#: .\stats\templates\mission.html:192
+msgid "Tankmen Rankings"
+msgstr "Рейтинг танкиста"
+
+msgid "Tankman Rankings"
+msgstr "Рейтинг танкиста"
+
+msgctxt "total"
+msgid "Lost aircrafts/tanks"
+msgstr "Потеряно самолетов/танков"
+
+#: .\stats\templates\squad.html:480 .\stats\templates\tankman.html:528
+msgctxt "specialty"
+msgid "Light Tanks"
+msgstr "Легких танков"
+
+#: .\stats\templates\squad.html:491 .\stats\templates\tankman.html:539
+msgctxt "specialty"
+msgid "Medium Tanks"
+msgstr "Средних танков"
+
+#: .\stats\templates\squad.html:502 .\stats\templates\tankman.html:550
+msgctxt "specialty"
+msgid "Heavy Tanks"
+msgstr "Тяжелых танков"
+
+#: .\stats\templates\squad.html:539
+msgid "K/L - Kills per Aircraft/Tank Lost"
+msgstr "Отношение K/L - Сбитых к потерям"
+
+#: .\stats\templates\squad.html:573
+msgid "GK/L - G.Kills per Aircraft/Tank Lost"
+msgstr "Отношение GK/L - Сбитых/уничтоженных к потерям"
+
+#: .\stats\templates\tankman.html:35
+msgid "Favorite Tank"
+msgstr "Предпочитаемый танк"
+
+#: .\stats\templates\tankman.html:53
+msgid "number of destroyed aerial targets for the current virtual life"
+msgstr "количество уничтоженных самолетов за текущую виртуальную жизнь"
+
+#: .\stats\templates\tankman.html:78 .\stats\templates\tankman.html:472
+#: .\stats\templates\tankman_vlife.html:73
+msgid "Destroyed aerial targets"
+msgstr "уничтоженны самолетов"
+
+#: .\stats\templates\tankman.html:398 .\stats\templates\tankman.html:484
+#: .\stats\templates\tankman_vlife.html:371
+msgctxt "total"
+msgid "Lost Tanks"
+msgstr "Потерянные танки"
+
+#: .\stats\templates\tankman.html:426 .\stats\templates\tankman_vlife.html:379
+msgctxt "total"
+msgid "Destroyed Friendly Aircraft"
+msgstr "Уничтожено дружественных самолетов"
+
+#: .\stats\templates\tankman.html:442
+msgid "Best Air Streak"
+msgstr "Лучший стрик"
+
+#: .\stats\templates\tankman.html:446
+msgid "Best Sortie Time Streak"
+msgstr "Макс. налет за одну жизнь"
+
+#: .\stats\templates\tankman.html:454
+msgid "Max Ground targets destroyed in one sortie"
+msgstr "Макс. кол-во уничтоженых Н.Ц. за один вылет"
+
+#: .\stats\templates\tankman.html:586
+msgid ""
+"if ratio > 1 - tankman playing in the minority, if ratio < 1 - tankman "
+"playing in the majority"
+msgstr ""
+"ратио > 1 - танкист играет в меньшинстве, ратио < 1 - танкист играет в "
+"большинстве"
+
+#: .\stats\templates\tankman.html:614
+msgid "K/L - Kills per Tank Lost"
+msgstr "K/L - уничтоженных к потерянным"
+
+#: .\stats\templates\tankman.html:630
+msgid "K/H - Kills per Sortie Time"
+msgstr "K/H - сбитых/уничтоженных за час"
+
+#: .\stats\templates\tankman.html:648
+msgid "GK/L - G.Kills per Tank Lost"
+msgstr "GK/L - уничтоженных к потерянным"
+
+#: .\stats\templates\tankman.html:664
+msgid "GK/H - G.Kills per Sortie Time"
+msgstr "GK/H - Уничтожено в час"
+
+#: .\stats\templates\tankman.html:679
+msgid "Other names of the tankman on this account"
+msgstr "Другие имена танкиста на этом аккаунте"
+
+#: .\stats\templates\tankman_awards.html:3
+#: .\stats\templates\tankman_awards.html:14
+msgctxt "tankman_awards"
+msgid "Tankman Awards"
+msgstr "Награды танкиста"
+
+#: .\stats\templates\tankman_awards.html:15
+msgctxt "tankman_awards"
+msgid "Tankman"
+msgstr "танкист"
+
+#: .\stats\templates\tankman_killboard.html:3
+#: .\stats\templates\tankman_killboard.html:14
+msgid "Tankman Killboard"
+msgstr "танкист Killboard"
+
+#: .\stats\templates\tankman_killboard.html:15
+#: .\stats\templates\tankman_vlifes.html:15
+msgid "Tankman"
+msgstr "танкист"
+
+#: .\stats\templates\tankman_sortie.html:3
+#: .\stats\templates\tankman_sortie.html:16
+msgctxt "sortie_page_title"
+msgid "Tankman Sortie"
+msgstr "Танковые бои"
+
+#: .\stats\templates\tankman_sortie.html:35
+#: .\stats\templates\tankman_sortie.html:36
+#: .\stats\templates\tankman_sortie_log.html:36
+#: .\stats\templates\tankman_sortie_log.html:37
+#: .\stats\templates\tankman_sorties.html:69
+#: .\stats\templates\tankman_sorties.html:70
+#: .\stats\templates\tankman_vlife.html:34
+#: .\stats\templates\tankman_vlife.html:35
+#: .\stats\templates\tankman_vlifes.html:64
+#: .\stats\templates\tankman_vlifes.html:65
+msgctxt "sortie_status"
+msgid "Tank is destroyed"
+msgstr "Танк уничтожен"
+
+#: .\stats\templates\tankman_sortie.html:47
+#: .\stats\templates\tankman_sortie.html:48
+#: .\stats\templates\tankman_sortie_log.html:48
+#: .\stats\templates\tankman_sortie_log.html:49
+#: .\stats\templates\tankman_sorties.html:81
+#: .\stats\templates\tankman_sorties.html:82
+#: .\stats\templates\tankman_vlife.html:46
+#: .\stats\templates\tankman_vlife.html:47
+#: .\stats\templates\tankman_vlifes.html:76
+#: .\stats\templates\tankman_vlifes.html:77
+msgctxt "sortie_status"
+msgid "In service"
+msgstr "В движении"
+
+#: .\stats\templates\tankman_sortie.html:52
+#: .\stats\templates\tankman_sortie_log.html:53
+#: .\stats\templates\tankman_sorties.html:15
+msgctxt "tankman_sorties"
+msgid "Tankman"
+msgstr "танкист"
+
+#: .\stats\templates\tankman_sortie.html:57
+#: .\stats\templates\tankman_sortie_log.html:58
+msgid "Back to tankman sorties list"
+msgstr "Назад к журналу танковых боёв"
+
+#: .\stats\templates\tankman_sortie.html:63
+#: .\stats\templates\tankman_sortie_log.html:64
+msgid ""
+"The results of this sortie are not included in the statistics of the tankman "
+"because of the disconnect"
+msgstr ""
+"Результаты данного боя не добавляются в статистику танкиста из-за разрыва "
+"связи"
+
+#: .\stats\templates\tankman_sortie.html:72
+msgctxt "sortie"
+msgid "Duration of sortie"
+msgstr "Продолжительность вылета"
+
+#: .\stats\templates\tankman_sortie.html:75
+msgctxt "sortie"
+msgid "Crew status"
+msgstr "Статус экипажа"
+
+#: .\stats\templates\tankman_sortie.html:89
+msgctxt "sortie"
+msgid "Destroyed ground targets"
+msgstr "Уничтожено наземных целей"
+
+#: .\stats\templates\tankman_sortie.html:90
+msgctxt "sortie"
+msgid "Destroyed aerial targets"
+msgstr "Уничтожено воздушных целей"
+
+#: .\stats\templates\tankman_sortie.html:95
+msgctxt "sortie"
+msgid "Tank"
+msgstr "танк"
+
+#: .\stats\templates\tankman_sortie.html:101
+msgctxt "tank_payload"
+msgid "Default"
+msgstr "По умолчанию"
+
+#: .\stats\templates\tankman_sortie.html:116
+msgctxt "sortie"
+msgid "Tank status"
+msgstr "Состояние танка"
+
+#: .\stats\templates\tankman_sortie.html:118
+msgctxt "sortie"
+msgid "In service"
+msgstr "в обслуживании"
+
+#: .\stats\templates\tankman_sortie.html:124
+msgctxt "sortie"
+msgid "Destroyed"
+msgstr "уничтожен"
+
+#: .\stats\templates\tankman_sortie.html:132
+msgctxt "sortie"
+msgid "Tank damage"
+msgstr "Повреждения танка"
+
+#: .\stats\templates\tankman_sortie_log.html:3
+msgctxt "sortie_page_title"
+msgid "Tankman Sortie Log"
+msgstr "Хронология танкового боя"
+
+#: .\stats\templates\tankman_sorties.html:3
+#: .\stats\templates\tankman_sorties.html:14
+msgctxt "tankman_sorties"
+msgid "Tankman Sorties"
+msgstr "Танковые бои"
+
+#: .\stats\templates\tankman_vlife.html:3
+#: .\stats\templates\tankman_vlife.html:15
+msgctxt "vlife_page_title"
+msgid "Tankman VLife"
+msgstr "Виртуальные жизн танкиста"
+
+#: .\stats\templates\tankman_vlife.html:51
+msgctxt "tankman_vlifes"
+msgid "Tankman"
+msgstr "танкист"
+
+#: .\stats\templates\tankman_vlife.html:56
+msgid "Back to tankman vlifes list"
+msgstr "Назад к списку виртуальных жизней танкиста"
+
+#: .\stats\templates\tankman_vlifes.html:3
+#: .\stats\templates\tankman_vlifes.html:14
+msgctxt "tankman_vlifes"
+msgid "Tankman Virtual Lifes"
+msgstr "Виртуальные жизни танкиста"
+
+#: .\stats\templates\tankmans.html:19
+msgid "Search Tankman"
+msgstr "Найти танкиста"
+
+#: .\stats\templates\tankmans.html:39
+msgid "Current Ground Streak"
+msgstr "Текущий стрик танкиста"
+
+#: .\stats\templates\tour.html:170
+msgctxt "tour_top"
+msgid "Best tankmen"
+msgstr "Лучшие танкист"
+
+#: .\stats\templates\tour.html:196
+msgctxt "tour_top"
+msgid "Best tankmen streak"
+msgstr "Лучшие стрики танкистa"
+
+#: .\stats\templates\tour.html:299
+msgctxt "tour_active"
+msgid "total tankmen"
+msgstr "Всего танкистов"
+
+msgid "Payload"
+msgstr "вооружение"
+
+#: .\stats\templates\main.html:223 .\stats\templates\tour.html:201
+msgid "Active pilots"
+msgstr "Активные пилоты"
+
+msgid "Sortie Time (hours:minutes)"
+msgstr "вылет (часы:минуты)"
+
+msgid "Sortie Time"
+msgstr "вылет"
+
+msgid "Destroyed ground targets"
+msgstr "Уничтожено наземных целей"
+
+msgid "Pilots Rankings"
+msgstr "Рейтинг пилотов"
+
+msgid "Players total"
+msgstr "Всего игроки"
+
+msgctxt "tour_active"
+msgid "total pilots"
+msgstr "Всего пилотов"
+
+#: .\stats\templates\tankman_sortie.html:81
+msgctxt "sortie"
+msgid "Abandoned tank"
+msgstr "Покинутый танк"
+
+msgctxt "sortie_status"
+msgid "Tank is abandoned"
+msgstr "Танк покинут"
+
+msgctxt "total"
+msgid "Abandoned tanks"
+msgstr "Покинутые танки"
+
+msgid "Tankmen"
+msgstr "танкист"
+
+#: .\stats\templates\squad.html:52
+msgid "Not enough players to participate in the rating"
+msgstr "Недостаточно игроков для участия в рейтинге"
+
+msgid "on the current ground streak of kills"
+msgstr "Текущий стрик танкиста по наземным целям"
+
+msgid "on the average number of ground kill per one death (GK/D)"
+msgstr "Среднее количество уничтоженных наземных целей на одну смерть (GK/D)"
+
+#: .\stats\templates\mission.html:212 .\stats\templates\tankmans.html:132
+#: .\stats\templates\squads.html:111
+msgid "on the average number of ground kill per one hour (GK/Hr)"
+msgstr "Среднее количество уничтоженных наземных целей за один час (GK/Hr)"
+
+msgctxt "sortie"
+msgid "Disabled"
+msgstr "выведен из строя"
+
+msgid "[Go to pilot statistics of same player]"
+msgstr "[Перейти к статистике пилота того же игрока]"
+
+msgid "[Go to tankman statistics of same player]"
+msgstr "[Перейти к статистике танкиста того же игрока]"
+
+msgid "Players on the server"
+msgstr "игроки на сервере"
+
+msgid "List of players online"
+msgstr "Список игроков онлайн"
+
+msgctxt "online"
+msgid "players"
+msgstr "игроков"
