--- a/changelog.txt
+++ b/changelog.txt
@@ -2,3 +2,9 @@ Version 1.0:
 
 - Initial version. 
 - Based on branch feature/statsByPlaneType of GitHub repo FGlazov/IL2_Stats
+
+Version 1.0.1
+
+- Create change log.
+- Add missing step to installation process.
+- Fix issue where "Best bomber pilot in last 24 hours" was not being translated to french.
