--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
 Version 1.0:
 
-- Initial version. 
-- Based on branch feature/statsByPlaneType of GitHub repo FGlazov/IL2_Stats
+- Initial version of bundle.
