Upgrade to version 1.0.2 of Global Aircraft Stats.

--- a/changelog.txt
+++ b/changelog.txt
@@ -18,3 +18,7 @@ Version 1.1.0
 Version 1.1.1
 
 - Upgrade to version of 1.0.1 of Global Aircraft Stats, which fixes bug with retroactive computations.
+
+Version 1.1.2
+
+- Upgrade to version 1.0.2 of Global Aircraft Stats, which fixes some more bugs.
