--- a/changelog.txt
+++ b/changelog.txt
@@ -15,3 +15,9 @@ Version 1.1.0
 - Technical changes to allow for compatibility to Aircraft Stats mod.
 - In pilot/squad view: When a player or squad has 0 fighter/attacker/bomber rating, show position as "-" instead of an arbitrary, large position.
 - Fix formating on main page on non-english pages, and also when "Best X in last 24 hours" and "Best live X" have non-full entries.
+
+Version 1.2.0
+
+- Introduction of modules system. SplitRankings turned into a module.
+- New module: Ammo Breakdown
+- New module: Ironman Stats
