Explicitelly import _get_rating_position function. Translation changes.

--- a/src/mod_rating_by_type/locale/fr/LC_MESSAGES/django.po
+++ b/src/mod_rating_by_type/locale/fr/LC_MESSAGES/django.po
@@ -208,12 +208,12 @@ msgstr ""
 
 #: .\mod_rating_by_type\bullets_types.py:64
 msgctxt "bullet_type"
-msgid "VYA-23 Soviet (AP)"
+msgid "VYA-23 (AP)"
 msgstr ""
 
 #: .\mod_rating_by_type\bullets_types.py:65
 msgctxt "bullet_type"
-msgid "VYA-23 Soviet (HE)"
+msgid "VYA-23 (HE)"
 msgstr ""
 
 #: .\mod_rating_by_type\bullets_types.py:66
